Overflow added for possible iphone fix

--- a/components/nav/nav.module.scss
+++ b/components/nav/nav.module.scss
@@ -164,6 +164,7 @@
 	height: 100vh;
 	width: 100%;
 	overflow-x: hidden;
+	overflow-y: auto;
 	background-color: $primary;
 	color: $light;
 	z-index: $zi-3;
